fix wrap note's text

--- a/project-vue/src/assets/css/general.css
+++ b/project-vue/src/assets/css/general.css
@@ -8,6 +8,11 @@
     box-sizing: border-box;
 }
 
+pre {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+}
+
 .v-application .container {
     margin: 0;
     padding: 0;
